# dyfj

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  bunfig.toml  deno.json  settings.example.json
.github/: dependabot.yml
core/: .env.example  Cargo.toml  README.md
core/.sqlx/: query-27cdc18c09c3ef05adc9ce09003e05536df1afa0c70dd33eb9560ac8e397ed19.json  query-d429c3905f49e2081c16f024f4b552aa27c2f13440252ee0a25e9dd2bd97465b.json  query-df9625b56c1097fd326d29b0e65aa012450779670dca876fbc2e6d629df5c2da.json  query-f2316c2c62ec1b5641cf34d90a0b5af1b6c21bde0fb09408c7cbb0d04a742f49.json
core/src/: error.rs  events.rs  lib.rs  main.rs
core/tests/: capability_round_trip.rs  schema_round_trip.rs
diagrams/: workbench-runtime-flow.d2  workbench-runtime.dsl
examples/: router-tour.ts
mcp/: server.ts
notes/: command-tool-primitive.md  contract-signature-routing-authz.md  cost-visibility-surface.md  events-as-substrate.md  tracer-bullet.md  workbench-model-routing-mvp.md  workbench-mvp-loop.md  workbench-runtime-veneers.md
prototype/: .env.example  README.md  config.example.toml  deno.json  package.json  settings.example.json  vitest.config.ts
schema/: 001_events.sql  002_memories.sql  003_sessions.sql  004_reflections.sql  005_tasks.sql  006_models.sql  007_events_model_selected.sql  008_events_budget_summary.sql  009_skills.sql  010_events_capability.sql  011_events_authn.sql  012_models_2026_06_refresh.sql  013_sessions_project.sql  014_models_openai_2026_06.sql  015_models_gemini_2026_06.sql  016_models_local_coder_default.sql  017_prompts.sql  README.md  (+7 more)
(+132 files in other folders)
